# fray

./: .gitignore  README.md  pyproject.toml  setup.py
UNKNOWN.egg-info/: SOURCES.txt
fray/: __init__.py  utils.py
fray/include/: flashinfer  reduce_utils.cuh  utils.cuh
fray/include/flash_attn/: flashattn_cute.cuh  softmax.cuh
fray/include/gemm/: fp16_gemm.cuh
fray/include/norm/: fused_rmsnorm.cuh
fray/include/reduce/: reduce.cuh
fray/include/rope/: rope.cuh
fray/include/softmax/: online_softmax.cuh  softmax.cuh
fray/jit/: compiler.py  interleave_ffma.py  runtime.py  template.py
fray/jit_kernels/: __init__.py  flashattn_cute.py  fp16_gemm.py  online_softmax.py  reduce.py  rmsnorm.py  softmax.py  tuner.py  utils.py
tests/: test_flashattn_cute.py  test_fp16_gemm.py  test_jit.py  test_online_softmax.py  test_reduce.py  test_rmsnorm.py  test_softmax.py
